entity_macros/tests/ui/derive/ent/duplicate-id.stderr
error: Already have an id elsewhere
 --> $DIR/duplicate-id.rs:8:11
  |
8 |     #[ent(id)]
  |           ^^
